--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7"
   }
